# aVM

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
aTester/: Cargo.toml  README.md
aTester/src/: arch.rs  jit_stats.rs  lib.rs  suite.rs  types.rs
aTester/src/runners/: avm.rs  mod.rs
aTester/tests/: examples.rs  kernel.rs
aTester/tests/fixtures/: examples.rs
crates/bootloader/: Cargo.toml  README.md
crates/clibc/: Cargo.toml  README.md
crates/examples/: Cargo.toml  README.md
crates/kernel/: Cargo.toml  README.md
crates/kernel/src/: bundle.rs  config.rs  global.rs  init.rs  init_boot.rs  lib.rs  main.rs  trap.rs  user_program.rs
crates/kernel/src/bundle/: create_account.rs  mod.rs  program_call.rs  result.rs  transfer.rs
crates/kernel/src/memory/: heap.rs  mod.rs  page_allocator.rs
crates/kernel/src/memory/tests/: first_test.rs  heap_edge_test.rs  mem_alloc_test.rs  mem_map_edge_test.rs  mem_map_test.rs  page_alloc_test.rs
crates/kernel/src/syscall/: alloc.rs  balance.rs  call_program.rs  fire_event.rs  mod.rs  panic.rs  storage.rs
crates/kernel/src/task/: mod.rs  prep.rs  run.rs  task.rs  trampoline.rs
crates/kernel/src/tests/: fail.rs  first_test.rs  heap_edge_test.rs  mem_alloc_test.rs  mem_map_edge_test.rs  mem_map_test.rs  page_alloc_test.rs  results.rs  utils.rs
crates/kernel/src/trap/: mod.rs  restore_trap_frame.rs  save_trap_frame.rs
crates/program/: Cargo.toml
crates/state/: Cargo.toml
crates/storage/: Cargo.toml
crates/vm/: Cargo.toml
crates/vm/src/: console.rs  cpu.rs  decoder.rs  exe.rs  instruction.rs  isa.rs  lib.rs  metering.rs  sys_call.rs  vm.rs
crates/vm/src/jit/: access.rs  compiler.rs  helpers.rs  mod.rs  trace.rs
crates/vm/src/memory/: mod.rs  sv32.rs
crates/vm/tests/: spec_runner.rs
(+50 files in other folders)
