[package]
name = "vm"
version = "0.1.0"
authors = ["Alon Muroch <alonmuroch@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { path = "../state" }  # adjust path as needed
types = { path = "../types" }  # adjust path as needed
cranelift-codegen = "0.102"
cranelift-frontend = "0.102"
cranelift-jit = "0.102"
cranelift-module = "0.102"
cranelift-native = "0.102"
target-lexicon = "0.12"

[features]
spec-tests = []

[dev-dependencies]
compiler = { path = "../compiler" }
